--- a/hacknott/templates/test.html
+++ b/hacknott/templates/test.html
@@ -8,12 +8,24 @@ Test!
 <body>
     <div id="container"> <!-- Specific class added -->
         <div class="game-selection-container">
-        <h1>Welcome to the Test!</h1>
+        <h1>Welcome to the Tests!</h1>
         <p></p>
-        <div class="button-container">
-                <form action="/play" method="POST">
-                    <button type="submit" class="game-button">Run Hacker Bench!</button>
-            </div>
+        
+                <form action="/type" method="POST">
+                    <button type="submit" class="game-button">Typing Test!</button>
+            </form>
+            <p></p>
+                    <form action="/threedee" method="POST">
+                        <button type="submit" class="game-button">3D Orientation Exam</button>
+                        </form>
+                        <p></p>
+                        <form action="/aim" method="POST">
+                            <button type="submit" class="game-button">Aim Test!</button>
+                            </form>
+                            <p></p>
+                            <form action="/memory" method="POST">
+                                <button type="submit" class="game-button">Memory Sequence Exam</button>
+                            </form>
     </div>
     </div>
 </body>
