--- a/hacknott/templates/highscores.html
+++ b/hacknott/templates/highscores.html
@@ -3,36 +3,81 @@
 Highscores!
 {% endblock %}
 {% block main %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile - High Scores</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to a CSS file for styling -->
-    
-</head>
-<body>
-    <div class="profile-container">
-        <h1>Highscores - {{ username }}</h1>
-        <table class="table table-striped table-hover">
-            <thead>
-                <tr>
-                    <th>Memory Leaderboard:</th>
-                   <th>Typing Leaderboard:</th>
-                   <th>3D Orientation Leaderboard:</th>
-                   <th>Aiming Leaderboard :</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>{{ ("%.2f" % highscores.memory) if highscores.memory is not none else "N/A" }}</td>
+<header style="font-size :x-large"> Your Stats! : {{ username }}</header>
+<br>
+<table class="table table-striped table-hover">
+    <thead>
+        <tr>
+            <th>Memory Highscore</th>
+            <th>Typing Highscore</th>
+            <th>3D Orientation Highscore</th>
+            <th>Aim Highscore</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>{{ ("%.2f" % highscores.memory) if highscores.memory is not none else "N/A" }}</td>
                     <td>{{ ("%.2f" % highscores.typing) if highscores.typing is not none else "N/A" }}</td>
                     <td>{{ ("%.2f" % highscores.threedee) if highscores.threedee is not none else "N/A" }}</td>
                     <td>{{ ("%.2f" % highscores.aim) if highscores.aim is not none else "N/A" }}</td>
-                </tr>
-                
-            <tfoot>
+        </tr>
         
-            </tfoot>
+    <tfoot>
+
+    </tfoot>
+</table>
+<br>
+<header> Add Friends : </header>
+<form action="/addfriend" method="post">
+    <input type="text" placeholder="Username" name="friendname" required>
+    <button type="submit">Add</button>
+</form>
+
+<div class="friendslist">
+    <p></p>
+    <p class="d-inline-flex gap-1">
+        <a style="color: white" class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+            Friends List:
+        </a>
+    </p>
+
+    <div class="collapse" id="collapseExample">
+        <div class="card card-body">
+            <table class="table table-striped table-hover">
+                <thead>
+                    <tr>
+                        <th>Username</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% if not friends_profiles %}
+                        <tr>
+                            <td>You have no friends</td>
+                            <td>No Actions To Be Made</td>
+                        </tr>
+                    {% else %}
+                        {% for friend in friends_profiles %}
+                        <tr>
+                            <td>{{ friend.username }}</td>
+                            <td>
+                                <form action="/viewfriends" method="post">
+                                    <input type="hidden" name="friends_id" value="{{ friend.user_id }}">
+                                    <button type="submit">View Stats</button>
+                                </form>
+                            </td>
+                            <td>
+                                <form action="/removefriend" method="post">
+                                    <input type="hidden" name="delete_id" value="{{ friend.user_id }}">
+                                    <button style="color: red" type="submit">Remove Friend</button>
+                                </form>
+                            </td>
+                        </tr>
+                        {% endfor %}
+                    {% endif %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 {% endblock %}
