--- a/hacknott/templates/layout.html
+++ b/hacknott/templates/layout.html
@@ -35,7 +35,7 @@
                             <li class="nav-item"><a class="nav-link" href="/test">Test Now!</a></li>
                             <li class="nav-item"><a class="nav-link" href="/graphs">Stats Graphs</a></li>
                             <li class="nav-item"><a class="nav-link" href="/leaderboard">Leaderboards</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/highscores">Highscores</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/highscores">Profile</a></li>
 
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
